{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 24,
  "lineage": "2c5a5ec2-5130-c50a-d808-8f86aa09cf1d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "flask_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkInterfaces/flask-nic",
            "internal_domain_name_suffix": "4bj0eaoiqrtuzpnf3ceic5c5ka.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/publicIPAddresses/flask-public-ip",
                "subnet_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/flask_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "flask-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "analyser_rg"
          },
          "dependencies": [
            "azurerm_public_ip.flask_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.flask_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "node_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkInterfaces/node-nic",
            "internal_domain_name_suffix": "4bj0eaoiqrtuzpnf3ceic5c5ka.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/publicIPAddresses/node-public-ip",
                "subnet_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/node_subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "node-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "analyser_rg"
          },
          "dependencies": [
            "azurerm_public_ip.node_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.node_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "flask_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/flask_subnet-nsg",
            "location": "eastus",
            "name": "flask_subnet-nsg",
            "resource_group_name": "analyser_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "node_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/node_subnet-nsg",
            "location": "eastus",
            "name": "node_subnet-nsg",
            "resource_group_name": "analyser_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "flask_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/publicIPAddresses/flask-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.137.69",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "flask-public-ip",
            "resource_group_name": "analyser_rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "node_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/publicIPAddresses/node-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.149.151.150",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "node-public-ip",
            "resource_group_name": "analyser_rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "flask_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/flask_subnet",
            "name": "flask_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "analyser_rg",
            "virtual_network_name": "analyser_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "node_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/node_subnet",
            "name": "node_subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "analyser_rg",
            "virtual_network_name": "analyser_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "flask_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/flask_subnet",
            "network_security_group_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/flask_subnet-nsg",
            "subnet_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/flask_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.flask_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.flask_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "node_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/node_subnet",
            "network_security_group_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/node_subnet-nsg",
            "subnet_id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/node_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.node_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.node_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "01a253f0-84c8-4c67-bda5-e888817c5f50",
            "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet",
            "location": "eastus",
            "name": "analyser_vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "analyser_rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/node_subnet",
                "name": "node_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/node_subnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/virtualNetworks/analyser_vnet/subnets/flask_subnet",
                "name": "flask_subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/c77c1ca7-0511-497c-84bd-2b785c7a7225/resourceGroups/analyser_rg/providers/Microsoft.Network/networkSecurityGroups/flask_subnet-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}